<resources>
    <string name="app_name">Economy Kanban</string>
    <string name="Login">Login</string>
    <string name="SubLogin">SubLogin</string>
    <string name="Email">Email</string>
    <string name="Passw">Password</string>
    <string name="cPassw">Confirm Password</string>
    <string name="cLogin">Login</string>
    <string name="cSignUp">Sign Up</string>
    <string name="Register">Register</string>
    <string name="or">Or</string>
    <string name="cancel">Cancel</string>

    <string name="shape_desc">A shape</string>

    <string name="AlrAcc">Already have an account</string>
    <string name="contWith">Or continue with</string>

    <!-- Welcome Screen-->
    <string name="welcome_title">Master Your Personal Finances</string>
    <string name="welcome_paragraph">Take control of your spending, save for your goals, and seize control of your future</string>
    <string name="welcome_login_btn">Login</string>
    <string name="welcome_register_btn">Register</string>

    <!-- Register Screen -->
    <string name="register_title">Create Account</string>
    <string name="register_paragraph">Create an account so you can take control of your finance future</string>
    <string name="register_email">Email</string>
    <string name="register_passwd">Password</string>
    <string name="register_confirm_passwd">Confirm Password</string>
    <string name="register_signUp">Sign up</string>
    <string name="register_have_an_account">Already have an account</string>
    <string name="google_sign_up">Sign up with Google</string>

    <!-- Login Screen -->
    <string name="login_title">Login here</string>
    <string name="login_paragraph">Welcome back you’ve been missed!</string>
    <string name="fPassw">Forgot your password?</string>
    <string name="singIn">Sing in</string>
    <string name="CreateAcc">Create new account</string>
    <string name="google_login">Login with Google</string>

    <!-- Bottom navigation menu -->
    <string name="transactions">Transactions</string>
    <string name="Categories">Categories</string>
    <string name="Graphics">Graphics</string>
    <string name="Settings">Settings</string>

    <!-- Toast Messages for the user [Register and Login]-->
    <string name="toast_fill_all_fields">Please fill out all fields</string>
    <string name="toast_short_password">Very short password please use 6 or more characters</string>
    <string name="toast_fail_save_user">Error saving user</string>
    <string name="toast_email_already_use">Email is already in use</string>
    <string name="toast_login_error">Login error</string>
    <string name="toast_sing_up_failed">Sign up failed</string>
    <string name="toast_error_uploading_file">Error uploading file</string>
    <string name="toast_welcome">Welcome!</string>
    <string name="toast_incorrect">Incorrect username or password</string>


    <!-- Dialog texts -->
    <string name="concept">Concept</string>
    <string name="quantity">Quantity</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="accept">Accept</string>
    <string name="noContentToast">Please, fill all the fields</string>

    <!-- Fragments -->
    <string name="date_format">MMMM d, Y</string>
    <!-- TODO: Cuando hagamos la traducción a español debemos ponerlo así: <string name="date_format">d 'de' MMMM, Y</string>-->

    <!-- POP UP MEMU -->
    <string name="all">All</string>
    <string name="Income">Income</string>
    <string name="Expense">All</string>

    <!-- 3 DOTS OPTION ITEMS -->
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>

    <!-- categories -->
    <string name="Global_cat">Global</string>
    <string name="na_cat">n/a</string>
    <string name="food_cat">Food</string>
    <string name="home_cat">Home</string>
    <string name="health_cat">Health</string>
    <string name="entertainment_cat">Entertainment</string>
    <string name="saves_cat">Saves</string>
    <string name="others_cat">Others</string>
    <string name="gym_cat">Gym</string>
    <string name="transport_cat">Transport</string>
    <string name="education_cat">Education</string>
    <string name="clothes_cat">Clothes</string>
    <string name="debts_cat">Debts</string>

    <!-- Settings Fragments -->
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- settings -->
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="darkmode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="manage_account">Manage Account</string>

    <!-- Manage Account -->
    <string name="done">Done</string>
    <string name="place_new_picture">Place new picture</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="manage_acc_action1">Enter your name and add your optional profile photo.</string>
    <string name="manage_acc_action2">You can change your password quickly and securely.</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="manage_acc_action3">If you log out your data will be in the Cloud, but if you want to delete all your data you should Delete Account.</string>

    <!-- _____________________ LANGUAGE ACTIVITY _______________________ -->
    <string name="english">English</string>
    <string name="espanish">Spanish</string>

    <!-- DIALOG NUEVA CATEGORIA -->
    <string name="new_category">New category</string>
    <string name="cat_add_succesfully">Category added succesfully</string>
    <string name="cat_add_error">Error adding category</string>

    <!-- _________________________ FORGOT PASSWORD ACTIVITY __________________________-->
    <string name="forgot_title">Forgot your password?</string>
    <string name="forgot_text">Enter your email to recover it.</string>
    <string name="btn_send_recovery_email">Send recovery email</string>
    <string name="btn_return_login">Return to login</string>

    <!-- ACTIVITY CURRENCY -->
    <string name="text_currency">Select your currency. This will only change the currency symbol; it does not perform a conversion between currencies.</string>

</resources>