<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/transactions"
        android:title="@string/transactions"
        android:icon="@drawable/transactions"
        android:contentDescription="none"

        />

    <item android:title="@string/Categories"
        android:icon="@drawable/category"
        android:id="@+id/categories"
        android:contentDescription="none"/>

    <item android:title="@string/Graphics"
        android:icon="@drawable/graphics"
        android:id="@+id/graphics"
        android:contentDescription="none"/>

    <item android:title="@string/Settings"
        android:icon="@drawable/settings"
        android:id="@+id/settings"
        android:contentDescription="none"/>

</menu>