<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />



        <!-- Aquí puedes colocar directamente tus elementos dentro del CardView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="openSignup">

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/Login"
                android:gravity="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/SubLogin"
                android:textSize="17dp"
                app:layout_constraintTop_toBottomOf="@id/register"
                tools:layout_editor_absoluteX="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_marginHorizontal="30dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:ems="20"
                android:background="@drawable/edit_text_background"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descRegister" />

            <EditText
                android:id="@+id/passw"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="30dp"
                android:ems="13"
                android:hint="@string/Passw"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_background"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <TextView
                android:id="@+id/fPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:textSize="16dp"
                android:text="@string/fPassw"
                android:textColor="#F91A6D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passw" />

            <Button
                android:id="@+id/cRegister"
                android:layout_width="0dp"
                android:layout_marginHorizontal="30dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:backgroundTint="#F91A6D"
                android:onClick="openMain"
                android:text="@string/cLogin"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passw" />

            <Button
                android:id="@+id/goRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#F3F3F3"
                android:onClick="openSignup"
                android:text="@string/CreateAcc"
                android:textColor="#F91A6D"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cRegister" />

            <TextView
                android:id="@+id/orContinueWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="16dp"
                android:text="@string/contWith"
                android:textColor="#F91A6D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goRegister" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#C6C6C6"
                app:layout_constraintStart_toStartOf="parent"
                android:text="G"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orContinueWith"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
