<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="305dp"
                android:layout_height="292dp"
                app:srcCompat="@drawable/women_welcome_img" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:fontFamily="@font/gabarito_semibold"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_paragraph"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:text="@string/welcome_login_btn"
                app:cornerRadius="10dp"
                android:fontFamily="@font/gabarito_medium"
                android:textSize="20sp"
                android:layout_marginRight="15dp"/>
"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                android:text="@string/welcome_register_btn"
                android:textColor="@color/black"
                app:cornerRadius="10dp"
                android:fontFamily="@font/gabarito_regular"
                android:textSize="20sp"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>