<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAccount">



    <!-- _________ DESING __________ -->

    <!-- Done -->
    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        style="@style/action_button"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        />

    <!-- VERTICAL SCROLL -->
  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/btn_done"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <!-- _________ GUIDE LINES __________ -->
      <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideLineStart"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintGuide_percent=".05"/>

      <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideLineEnd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintGuide_percent=".95"/>

      <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideLineMiddle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintGuide_percent=".2" />

          <!-- Picture -->
          <ImageView
              android:id="@+id/picture"
              android:layout_width="137dp"
              android:layout_height="139dp"
              android:src="@drawable/blank"

              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_bias=".0"
              />

          <!-- Btn place new picture -->
          <Button
              android:id="@+id/btn_new_picture"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/place_new_picture"
              style="@style/action_button"

              app:layout_constraintTop_toBottomOf="@id/picture"
              app:layout_constraintEnd_toEndOf="@id/picture"
              app:layout_constraintStart_toStartOf="@id/picture"
              />

          <!-- Name and Lastname -->

        <EditText
            android:id="@+id/nameEditText"
            style="@style/manage_account_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/btn_new_picture" />

        <EditText
              android:id="@+id/LastnameEditText"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:hint="@string/lastname"
              style="@style/manage_account_edit_text"

              android:layout_marginTop="10dp"
              app:layout_constraintTop_toBottomOf="@id/nameEditText"
              app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
              app:layout_constraintStart_toStartOf="@id/guideLineStart" />

          <TextView
              android:id="@+id/text_action1"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="@string/manage_acc_action1"
              style="@style/action_text"

              android:layout_marginTop="5dp"
              app:layout_constraintTop_toBottomOf="@id/LastnameEditText"
              app:layout_constraintStart_toStartOf="@id/guideLineStart"
              app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
              />

          <!-- MAIL & PASSWORD -->
          <TextView
              android:id="@+id/mail_locked"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:drawableEnd="@drawable/icon_lock"
              style="@style/manage_account_text_view"


              android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@id/text_action1"
              app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
              app:layout_constraintStart_toStartOf="@id/guideLineStart"
              />

          <!-- relative layout for password -->
          <RelativeLayout
              android:id="@+id/change_password"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:gravity="start|center_vertical"

              android:layout_marginTop="10dp"
              app:layout_constraintTop_toBottomOf="@id/mail_locked"
              app:layout_constraintStart_toStartOf="@id/guideLineStart"
              app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
              >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="********"
                android:textSize="16sp"
                android:drawableEnd="@drawable/right_arrow"
                style="@style/manage_account_text_view"
                />
          </RelativeLayout>

        <TextView
            android:id="@+id/action_text2"
            style="@style/action_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/manage_acc_action2"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/change_password" />

        <!-- LOG OUT & DELETE ACCOUNT -->
        <!-- logout -->
        <RelativeLayout
            android:id="@+id/logout_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingVertical="8dp"

            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/action_text2"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            >

            <TextView
                android:id="@+id/logout"
                style="@style/logout_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/logout"
                android:drawableEnd="@drawable/right_arrow"

                android:text="@string/logout" />
        </RelativeLayout>

        <!-- delete account -->
        <RelativeLayout
            android:id="@+id/delete_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingVertical="8dp"

            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/logout_account"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            >

            <TextView
                android:id="@+id/delete"
                style="@style/logout_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_delete_account"
                android:drawableEnd="@drawable/right_arrow"

                android:text="@string/delete_account" />
        </RelativeLayout>

        <!-- text action 3 -->
        <TextView
            android:id="@+id/action_text3"
            style="@style/action_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/manage_acc_action3"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/delete_account" />




    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>